<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="#B0B0B0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintDimensionRatio="H, 1:2"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/cProfileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@null"
            android:src="@drawable/ic_profile_placeholder" />

        <LinearLayout
            android:id="@+id/cFront"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:padding="16dp">
                <TextView
                    android:id="@+id/cName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ime_i_prezime"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/cAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_23_godina"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp" />
                <TextView
                    android:id="@+id/cDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_2_km"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="24dp"
            android:visibility="gone"
            android:background="#B0B0B0">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_player"
                android:textSize="22sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="16dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_of_play"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/cLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amaterski_level_igranja"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frequency"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/cFrequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_puta_tjedno"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_marginBottom="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/cPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desno"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp" />
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/cLike"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/favorite"
            android:visibility="gone"
            android:alpha="0"
            android:contentDescription="@string/like"
            app:tint="@color/like_color"/>
        <ImageView
            android:id="@+id/cDislike"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/dislike"
            android:visibility="gone"
            android:alpha="0"
            android:contentDescription="@string/dislike"
            app:tint="@color/ui_color"/>

        <LinearLayout
            android:id="@+id/cRatingOverlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="65dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="6dp"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/cRatingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.6"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/cRatingStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" ★"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnFlipCard"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="12dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/prika_i_dodatne_informacije"
            android:src="@drawable/info"
            app:tint="@android:color/white" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>