<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvRateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grade_player"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="12dp"/>

    <RatingBar
        android:id="@+id/rbGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0" />

    <EditText
        android:id="@+id/etComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:minLines="3"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnSendRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginTop="12dp"/>
</LinearLayout>
