<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ui_color_transparent"
    android:padding="32dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="24dp"
        app:cardElevation="14dp"
        app:cardBackgroundColor="@android:color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Match"
                android:textColor="@color/ui_color"
                android:textSize="28sp"
                android:textStyle="bold"
                android:letterSpacing="0.1"
                android:paddingBottom="16dp" />

            <FrameLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/bg_match"
                android:layout_marginBottom="18dp"
                app:tint="@color/like_color">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/favorite"
                    app:tint="@color/ui_color" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_s_a_match"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/look_your_match_tab"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>
